playing with the graph.  now have x, y and z showing up from one sensor.

--- a/source/SensorTagReaderSolution/SensorTagReader/Pages/AccelerometerGraph.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/Pages/AccelerometerGraph.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="SensorTagReader.Pages.AccelerometerGraph"
+    x:Class="SensorTagReader.Controls.AccelerometerGraph"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SensorTagReader.Pages"
+    xmlns:local="using:SensorTagReader.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -21,6 +21,7 @@
                 <TextBlock
                     VerticalAlignment="Center"
                     Text="Number of items"/>
+                <TextBlock VerticalAlignment="Center" Text="{Binding Path=MyLabel}"></TextBlock>
                 <controls:NumericUpDown
                     x:Name="NumberOfIitemsNumericUpDown"
                     Margin="5,0"
@@ -48,7 +49,17 @@
                     IndependentValueBinding="{Binding Name}"
                     DependentValueBinding="{Binding Value}"
                     IsSelectionEnabled="True" />
-                </charting:Chart>
+                <charting:LineSeries
+                    Title="Y Acceleromter"
+                    IndependentValueBinding="{Binding Name}"
+                    DependentValueBinding="{Binding Value}"
+                    IsSelectionEnabled="True" />
+                <charting:LineSeries
+                    Title="Z Acceleromter"
+                    IndependentValueBinding="{Binding Name}"
+                    DependentValueBinding="{Binding Value}"
+                    IsSelectionEnabled="True" />
+            </charting:Chart>
             </Grid>
         </Grid>
 </UserControl>
